--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,23 @@
-plugins{
+plugins {
     id "java"
     id "org.springframework.boot" version "1.5.4.RELEASE"
 }
-repositories{
+
+repositories {
     mavenCentral()
 }
-dependencies{
+
+dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 97a5de2... Add TimeEntry MVC in memory
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
 
->>>>>>> 97a5de2... Add TimeEntry MVC in memory
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
-jar{
-    manifest{
-        attributes("Main-Class":"io.pivotal.pal.tracker.PalTrackerApplication")
-    }
-}
-test.environment([
-        "WELCOME_MESSAGE": "Hello from test",
 
+bootRun.environment([
+        "WELCOME_MESSAGE": "hello",
 ])
 
-
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
